added script sample

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,5 +7,10 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- <script
+      defer
+      src="http://localhost:3000/react-app-setup_d1ab080f2b5b9e3f884d.js"
+    ></script> -->
   </body>
 </html>
